<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linear_initials"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/initials"
                    style="@style/card_text_initial"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/circular_image"
                    android:gravity="center"
                    android:text="JC"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <LinearLayout
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/initials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/title_id"
                        style="@style/card_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.2"
                        android:text="@string/title_id" />
                    <TextView
                        android:id="@+id/user_id"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        style="@style/card_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/title_id"
                        android:text="1" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_marginVertical="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_toEndOf="@id/linear_initials">
                <LinearLayout
                    android:layout_weight="0.3"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                style="@style/card_title_text"
                                android:layout_weight="0.2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_name" />

                            <TextView
                                android:id="@+id/name"
                                android:layout_weight="1"
                                style="@style/card_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/name" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_weight="0.2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_user"
                                style="@style/card_title_text" />
                            <TextView
                                android:layout_weight="1"
                                android:id="@+id/user_name"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/user_name"
                                style="@style/card_text" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <TextView
                                    android:layout_weight="0.2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/title_email"
                                    style="@style/card_title_text" />
                                <TextView
                                    android:id="@+id/email"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/email"
                                    style="@style/card_text" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    style="@style/card_title_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.2"
                                    android:text="@string/title_phone" />
                                <TextView
                                    android:id="@+id/phone"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/phone"
                                    style="@style/card_text" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:orientation="horizontal">
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1.3"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/card_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/title_website" />
                    <TextView
                        android:id="@+id/website"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/website"
                        style="@style/card_text" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>